# stm32-basys3-driver

./: README.md
basys3/: .gitignore
basys3/basys3.srcs/constrs_1/new/: constraints.xdc
basys3/basys3.srcs/sim_1/new/: common_tasks.svh  core_tests.sv  tb_alu_block.sv  tb_alu_core.sv
basys3/basys3.srcs/sources_1/bd/design_1/: design_1.bd
basys3/basys3.srcs/sources_1/new/: alu_block.sv  alu_core.sv  baud_rate_gen.sv  typedefs.svh  uart_tx.sv
pc/: README.md  pyproject.toml
pc/src/cli/: fpga_drive_test.py  main.py
