[project]
name = "gui"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan Eng",email = "rye18625@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyserial (>=3.5,<4.0)"
]

[tool.poetry]
packages = [{include = "gui", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
